# yt-clipper-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.full.yml  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-07-14-tiktok-caption-and-batch-search.md  2026-07-15-model-selector-and-project-delete.md  2026-07-15-search-duration-filter.md  2026-07-15-search-suggestions.md
docs/superpowers/specs/: 2026-07-14-tiktok-caption-and-batch-search-design.md  2026-07-15-model-selector-and-project-delete-design.md  2026-07-15-search-duration-filter-design.md  2026-07-15-search-suggestions-design.md
migrations/: env.py
migrations/versions/: 0001_create_download_jobs.py  0002_add_metadata_and_tiktok_fields.py
src/yt_clipper/: __init__.py  config.py  main.py  worker.py
src/yt_clipper/application/: ports.py  use_cases.py
src/yt_clipper/domain/: exceptions.py  trends.py  video.py
src/yt_clipper/infrastructure/ai/: anthropic_caption.py
src/yt_clipper/infrastructure/media/: __init__.py  (+1 more)
tests/integration/: test_http_api.py
tests/unit/: test_anthropic_caption.py  test_clip_range.py  test_config.py  test_download_job.py  test_ffmpeg_processor.py  test_local_storage.py  test_queue.py  test_repository.py  test_trends_domain.py  test_worker.py  test_youtube_trends.py  test_ytdlp_provider.py
tests/unit/application/: test_create_download_use_case.py  test_delete_download_use_case.py  test_execute_download_job_use_case.py  test_generate_tiktok_caption_use_case.py  test_get_search_suggestions_use_case.py  test_search_and_batch_use_cases.py
(+11 files in other folders)
