[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "yt-clipper-api"
version = "0.1.0"
description = "FastAPI service for downloading YouTube videos or bounded clips using background workers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "anthropic>=0.40.0",
    "celery[redis]>=5.4.0",
    "fastapi>=0.111.0",
    "imageio-ffmpeg>=0.5.1",
    "pydantic-settings>=2.3.4",
    "psycopg[binary]>=3.2.1",
    "python-multipart>=0.0.9",
    "redis>=5.0.7",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1",
    "yt-dlp>=2024.7.16",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.1",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yt_clipper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=yt_clipper --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["yt_clipper"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["yt_clipper"]

[[tool.mypy.overrides]]
module = ["celery.*", "yt_dlp.*"]
ignore_missing_imports = true
